--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ footer{
 </header>
 
 <section class="hero" id="PROMOTION">
-    <img src="shopping__2_-removebg-preview.png" alt="artist kit">
+    <img src="img/shopping__2_-removebg-preview.png" alt="artist kit">
     <div class="hero-text">
         <h1>Artist's kit</h1>
         <p>50% off today only</p>
@@ -382,13 +382,13 @@ footer{
 
 
     <div class="card">
-        <img src="g27514548742-removebg-preview.png">
+        <img src="img/g27514548742-removebg-preview.png">
         <h4>sketchbook organizer</h4>
         <div class="price">80$</div>
     </div>
 
     <div class="card">
-        <img src="g33425610882-removebg-preview.png">
+        <img src="img/g33425610882-removebg-preview.png">
         <h4>art tube</h4>
         <div class="price">30$</div>
     </div>
@@ -400,49 +400,49 @@ footer{
 
 
     <div class="card">
-        <img src="g58709477992-removebg-preview.png">
+        <img src="img/g58709477992-removebg-preview.png">
         <h4>sketchbook pencils</h4>
         <div class="price">20$</div>
     </div>
 
     <div class="card">
-        <img src="6544618006-removebg-preview.png">
+        <img src="img/6544618006-removebg-preview.png">
         <h4>sketchbook pencils</h4>
         <div class="price">20$</div>
     </div>
 
     <div class="card">
-        <img src="bux75dk9wtu7ewuhivw1cdr70m4lmm6f-removebg-preview.png">
+        <img src="img/bux75dk9wtu7ewuhivw1cdr70m4lmm6f-removebg-preview.png">
         <h4>Sketching pencils</h4>
         <div class="price">25$</div>
     </div>
 
     <div class="card">
-        <img src="g86853433964-removebg-preview.png">
+        <img src="img/g86853433964-removebg-preview.png">
         <h4>Dye</h4>
         <div class="price">5$</div>
     </div>
 
      <div class="card">
-        <img src="d66857398904l-removebg-preview.png">
+        <img src="img/d66857398904l-removebg-preview.png">
         <h4>Gypsum</h4>
         <div class="price">20$</div>
     </div>
 
     <div class="card">
-        <img src="png-klev-club-899f-p-gipsovaya-golova-png-1-removebg-preview.png">
+        <img src="img/png-klev-club-899f-p-gipsovaya-golova-png-1-removebg-preview.png">
         <h4>Plaster head</h4>
         <div class="price">50$</div>
     </div>
 
     <div class="card">
-        <img src="g66264058764-removebg-preview.png">
+        <img src="img/g66264058764-removebg-preview.png">
         <h4>Palette</h4>
         <div class="price">5$</div>
     </div>
 
     <div class="card">
-        <img src="g27514730942-removebg-preview.png">
+        <img src="img/g27514730942-removebg-preview.png">
         <h4>Pencil case</h4>
         <div class="price">10$</div>
     </div>
@@ -451,7 +451,7 @@ footer{
 </section>
 
 <section class="banner" id="BESTSELLER">
-    <img src="фон-с-мольбертами-в-художественной-школе-пустой-художественный-класс-180952385.webp">
+    <img src="img/фон-с-мольбертами-в-художественной-школе-пустой-художественный-класс-180952385.webp">
     <div class="banner-text">
         <h2>easels</h2>
         <span>$189</span>
@@ -460,7 +460,7 @@ footer{
 
 <div class="brand">
     <div class="brand-box">
-        <img src="Без названия.png" alt="">
+        <img src="img/Без названия.png" alt="">
     </div>
 </div>
 
@@ -468,55 +468,55 @@ footer{
 <div class="products2">
 
     <div class="card">
-        <img src="d10480619872l-removebg-preview.png">
+        <img src="img/d10480619872l-removebg-preview.png">
         <h4>epoxy resin</h4>
         <div class="price">41.4$</div>
     </div>
 
     <div class="card">
-        <img src="d52493032502p-removebg-preview.png">
+        <img src="img/d52493032502p-removebg-preview.png">
         <h4>acrylic paint</h4>
         <div class="price">5.9$</div>
     </div>
 
     <div class="card">
-        <img src="d140295248844l-removebg-preview.png">
+        <img src="img/d140295248844l-removebg-preview.png">
         <h4>pastel</h4>
         <div class="price">36.79$</div>
     </div>
 
     <div class="card">
-        <img src="d140250778274l-removebg-preview.png">
+        <img src="img/d140250778274l-removebg-preview.png">
         <h4>artistic charcoal</h4>
         <div class="price">7.99$</div>
     </div>
 
     <div class="card">
-        <img src="g23008270412-removebg-preview.png">
+        <img src="img/g23008270412-removebg-preview.png">
         <h4>acrylic paint</h4>
         <div class="price">5.24$</div>
     </div>
 
     <div class="card">
-        <img src="df5010300846l-removebg-preview.png">
+        <img src="img/df5010300846l-removebg-preview.png">
         <h4>oil paint</h4>
         <div class="price">13.53$</div>
     </div>
 
     <div class="card">
-        <img src="d69765319974l-removebg-preview.png">
+        <img src="img/d69765319974l-removebg-preview.png">
         <h4>watercolor paint</h4>
         <div class="price">38.5$</div>
     </div>
 
     <div class="card">
-        <img src="g23006466862-removebg-preview.png">
+        <img src="img/g23006466862-removebg-preview.png">
         <h4>acrylic paint</h4>
         <div class="price">8.66$</div>
     </div>
 
     <div class="card">
-        <img src="df31314644252l-removebg-preview.png">
+        <img src="img/df31314644252l-removebg-preview.png">
         <h4>thickener</h4>
         <div class="price">32.85$</div>
     </div>
@@ -550,4 +550,5 @@ footer{
 </footer>
 
 </body>
+
 </html>
